# Pose2sim-Automation-Pipeline

./: .gitignore  README.md  findings.md  launch_pose2sim_gui.bat  progress.md  pyproject.toml  task_plan.md
codex_audit_reports_2026-06-21/: 03_新对话恢复提示词.md
docs/: 中文使用说明.md
pose2sim_pipeline_gui/: __init__.py  app.py  caliscope_bridge.py  caliscope_launcher.py  checkerboard.py  config_adapter.py  config_builder.py  environment.py  joint_metadata.py  models.py  mot.py  paths.py  pipeline_cli.py  project_state.py  report.py  results_export.py  runner.py  video.py  workspace.py
tests/: test_caliscope_bridge.py  test_caliscope_help_text.py  test_config_builder.py  test_environment.py  test_mot_and_report.py  test_paths_video_checkerboard.py  test_pipeline_cli.py  test_project_state.py  test_runner.py  test_workspace.py
